# DigitalTWINS-Portal

./: .env.template  .gitattributes  .gitignore  IMPLEMENTATION_COMPLETE.md  KEYCLOAK_AUTH_INTEGRATION.md  KEYCLOAK_QUICKSTART.md  README.md  docker-compose.override.yml  docker-compose.yml  run_app_docker.bat  run_app_locally.bat
backend/: .env  .gitignore  Dockerfile  backend_compose_dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
backend/app/: main.py
backend/app/builder/: build.py  build_tool.py  build_workflow.py  deploy.py  deploy_tool.py  log_stream.py  logger.py  minio_client.py  proc_stream.py  source_acquirer.py
backend/app/cli/: __init__.py  import_measurement.py  keycloak_login.py
backend/app/client/: digitaltwins_api.py  fhir.py  keycloak.py  minio.py
backend/app/database/: database.py
backend/app/models/: assay_model.py  dashboard.py  db_model.py
backend/app/router/: clinical_report_viewer.py  dashboard.py  measurement_router.py  workflow_router.py  workflow_tool_plugin.py
backend/app/services/: measurement_approval.py  measurement_chunk_store.py  (+4 more)
backend/data/: __init__.py  mock.py
backend/models/: model.py
backend/router/: clinical_report_viewer.py  dashboard.py  dashboard_mock.py  tumour_position.py  tumour_segmentation.py
backend/tests/: test_keycloak_login.py  test_log_stream.py  test_measurement_chunk_store.py  test_measurement_classifier.py  test_measurement_import.py  test_validate_sparc_structure.py  test_vite_config_injection.py
backend/utils/: __init__.py  configs.py  setup.py  tools.py
(+325 files in other folders)
