[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.40.25",
    "fastapi[all]>=0.116.1",
    "nibabel==5.3.2",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pathlib==1.0.1",
    "pillow==11.1.0",
    "psycopg2==2.9.10",
    "pynrrd==1.1.3",
    "python-dotenv==1.1.1",
    "python-irodsclient==3.0.0",
    "requests==2.32.4",
    "scikit-image==0.24.0",
    "simpleitk==2.4.1",
    "sparc-me>=3.0.2",
    "sqlalchemy>=2.0.43",
]
